# pomfret_reachy

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  STUDENT-INTRO.md  STUDENT-PROJECT.md  STUDENT-RUNBOOK.md  TOOLKIT.md  go  peachy  requirements-student.txt  run.sh
apps/boo_hide/: README.md  index.html  plan.md  pyproject.toml
apps/boo_hide/boo_hide/: main.py
apps/boo_hide/boo_hide/static/: index.html  main.js  style.css
dashboard/: gradio_panel.py  personality_catalog.py  run.sh  server.py  voice_catalog.py
dashboard/conversation_patch/: bootstrap.py  go_to_sleep.py  idle_motion.py  sleep_on_phrase.py  voice_default.py
dashboard/static/: conversation.html  fan.html  index.html  lights.html  nav.css  nav.js  watch.html
dashboard/student/: LIGHT-PANEL.md
docs/: BUILD-YOUR-APP.md  reachy_mini_build_reference.md  reachy_mini_reference.md
scripts/: app-conversation.sh  app-leave.sh  cal-head.py  cam-motion-watch.py  cam-preview-loop.py  cam-snap.py  conversation-launch.py  ctl-body-yaw.py  ctl-express.py  ctl-toggle.py  ctl-wake.py  diag-panel.py  diag-yaw.py  fan_read.py  head_pose.py  hostfind.py  light-scene.py  light_lab.py  light_probe.py  light_sensor.py  motion_ready.py  net-connect.sh  net-quiet.sh  package-student.sh  sleep_gentle.py  sound_sync.py  spoken_line.py  tool-fan.sh  tool-print-links.py  tool-qr.py  tool-stop-all.sh  v01-echo-server.py  warmup_bridge.py  watch-room.py
scripts/archive/: README.md  app-roommode.sh  app-run-conversation.sh  cal-light.py  diag-audio.py  diag-sim.py  diag-wired.py
tests/: test_sim_motion.py
(+1 files in other folders)
